objects/RMA_Audit_log__c.object
<CustomObject>
    <description>This object is used to log all the events that occur in RMA process flow i.e. from the stage RMA raised till the closure of RMA.</description>
    <fields>
        <fullName>Cc__c</fullName>
        <label>Cc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date_Used_in_Report__c</fullName>
        <description>This field is used in reports to show time stamp of created date.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date(Used in Report)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_CSR_Submission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time for CSR Submission</description>
        <label>Cycle Time for CSR Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_Customer_Qty_Validation__c</fullName>
        <label>Cycle Time for Customer Qty Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_Fab_Validation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time for Fab Validation</description>
        <label>Cycle Time for Fab Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_Finance_Approval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time for Finance Approval</description>
        <label>Cycle Time for Finance Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_Regional_Approval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time for Regional Approval</description>
        <label>Cycle Time for Regional Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_for_Wafer_Acknowledgement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time for Wafer Acknowledgement</description>
        <label>Cycle Time for Wafer Acknowledgement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_CQ_Validation__c</fullName>
        <label>Cycle time consumed for CQ Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_CSR_Submission__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time consumed for CSR Submission</description>
        <label>Cycle time consumed for CSR Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_Fab_Validation__c</fullName>
        <description>This field is used to store the cycle time consumed for Fab Validation</description>
        <label>Cycle time consumed for Fab Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_Finance_Approval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time consumed for Finance Approval</description>
        <label>Cycle time consumed for Finance Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_RegionalApproval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time consumed for Regional Approval</description>
        <label>Cycle time consumed for RegionalApproval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_time_consumed_for_Wafer_Ack__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store the cycle time consumed for wafer acknowledgement.</description>
        <label>Cycle time consumed for Wafer Ack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for capturing mail log. It indicates whether the mail is resent.</description>
        <label>Is Resend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_CQ_Validation__c</fullName>
        <label>Queue-in Time for CQ Validation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_CSR_Submission__c</fullName>
        <description>This field is used to store the queue in time for CSR Submission</description>
        <label>Queue-in Time for CSR Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_Fab_Validation__c</fullName>
        <description>This field is used to store the queue in time for Fab Validation</description>
        <label>Queue-in Time for Fab Validation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_Finance_Approval__c</fullName>
        <description>This field is used to store the queue in time for Finance Approval</description>
        <label>Queue-in Time for Finance Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_Regional_Approval__c</fullName>
        <description>This field is used to store the queue in time for Regional Approval</description>
        <label>Queue-in Time for Regional Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_in_Time_for_Wafer_Acknowledgement__c</fullName>
        <description>This field is used to store the queue in time for Wafer Acknowledgement</description>
        <label>Queue-in Time for Wafer Acknowledgement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_CQ_Validation__c</fullName>
        <label>Queue-out Time for CQ Validation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_CSR_Submission__c</fullName>
        <description>This field is used to store the queue out time for CSR Submission</description>
        <label>Queue-out Time for CSR Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_Fab_Validation__c</fullName>
        <description>This field is used to store the queue out time for Fab Validation</description>
        <label>Queue-out Time for Fab Validation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_Finance_Approval__c</fullName>
        <description>This field is used to store the queue out time for Finance Approval</description>
        <label>Queue-out Time for Finance Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_Regional_Approval__c</fullName>
        <description>This field is used to store the queue out time for Regional Approval</description>
        <label>Queue-out Time for Regional Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_out_Time_for_Wafer_Acknowledgement__c</fullName>
        <description>This field is used to store the queue out time for Wafer Acknowledgement</description>
        <label>Queue-out Time for Wafer Acknowledgement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <description>Audit logs are captured for each RMA. This field acts as a reference to RMA.</description>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>Audit log</relationshipLabel>
        <relationshipName>RMA_Audit_logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>This field is used in mail log to capture subject of mail.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>RMA Audit log</label>
    <nameField>
        <displayFormat>RMA-Audit-{0000000000}</displayFormat>
        <label>RMA Audit log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Audit logs</pluralLabel>
    <recordTypes>
        <fullName>Cycle_Time_Log</fullName>
        <active>true</active>
        <label>Cycle Time Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mail_Log</fullName>
        <active>true</active>
        <label>Mail Log</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>